--- a/challenge1.html
+++ b/challenge1.html
@@ -32,7 +32,7 @@
       <li>So long lives this, and this gives life to thee.</li>
     </ul>
       
-    <p class="copyright">See the 
+    <p class="copyright" &copy; 2020>See the 
     <a href="http://en.wikipedia.org/wiki/Shakespeare%27s_Sonnets">
     Shakespeare's sonnets</a> Wikipedia article for more information
     </p>
