--- a/challenge1.html
+++ b/challenge1.html
@@ -10,6 +10,13 @@
   <body>
    <h1>Shakespeare's Sonnet #18</h1>
     <p>
+      To make branch 
+      <h1>git branch branchname</h1>
+      <h2>check which is active branch 
+        <br> git branch <br>
+        to make the branch active :
+        git checkout branch name
+      </h2>
        This is one of the most famous of the sonnets. It is referenced
        in the film Dead Poets Society and gave names to the band The
        Darling Buds and the book and television series The Darling Buds
