--- a/challenge1.html
+++ b/challenge1.html
@@ -15,7 +15,7 @@
        Darling Buds and the book and television series The Darling Buds
        of May. Read it and weep!
     </p>
-    <ul>
+    <ul class="added">
       <li>Shall I compare thee to a summer's day?</li>
       <li>Thou art more lovely and more temperate:</li>
       <li>Rough winds do shake the darling buds of May,</li>
