--- a/challenge1.html
+++ b/challenge1.html
@@ -17,10 +17,11 @@
         to make the branch active :
         git checkout branch name
       </h2>
-       This is one of the most famous of the sonnets. It is referenced
-       in the film Dead Poets Society and gave names to the band The
-       Darling Buds and the book and television series The Darling Buds
-       of May. Read it and weep!
+      <h2>push new branch to remote</h2>
+      <p> $ git push --set-upstream origin newbranch
+      </p>
+      <p>
+      This is the first banch of new branch.
     </p>
     <ul>
       <li>Shall I compare thee to a summer's day?</li>
